Implementazione quasi totale della funzione di logging, manca integrazione

--- a/TODO
+++ b/TODO
@@ -1,1 +1,6 @@
-everything
+File di log: definire formato, scrivere funzione apposita
+
+logging.c: writen nella scrittura nel file di log?
+
+Riguardo al file parse_config.c:
+Salvataggio/ripristino di errno va fatto ogni volta oppure lo sposto in cleanup()?
