Principalmente modificato strutture dati server da var. globali a parametri per riferimento

--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@ logging.c: writen nella scrittura nel file di log? (legata alla precedente)
 Server: HT di strutture di file (dati, size, permessi/flag, ...) + LL di pathname per selez vittime
 	Potrei ad esempio togliere fare code di file lockati per evitare di toglierli dalla cache in risposta ad una W
 	Questo perché i file li accedo singolarmente, ma per mantenere la politica di espulsione FIFO è più efficiente una LL
+
+	Modificare la funzione di logging per passare formato e argomenti (tipo nel worker)
 Riguardo al file parse_config.c: salvataggio/ripristino di errno va fatto ogni volta oppure lo sposto in cleanup()?
 In realtà la decisione sopra la posso applicare a tutto
 
@@ -13,5 +15,5 @@ API:
 	Per efficienza potrei usare una HT per memorizzare le coppie, indicizzandole col PID, ma siccome mi aspetto di
 	avere al max ~100 client non guadagno molto in termini di efficienza (inoltre potrei adottare una politica di
 	resize dell'array che lo dimezzi quando #client connessi << capacità
-	
+
 Modificare separatore da '/0' a ':'
